--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#my-skill">Skills</a>
             <a href="#my-projects">Project</a>
             <a href="#my-contact">Contact</a>
-            <a href="icon/Raghavendra vellaturi.pdf" class="resume-button" download>Download Resume</a>
+            <a href="icon/Raghavendra Resume.pdf" class="resume-button" download>Download Resume</a>
             <div id="dark-mode-toggle" class="dark-mode-toggle">
                 <i class="fas fa-moon"></i>
         </div>
