--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img id="Home" src="port-pic.webp" alt="Raghava's pic" class="main-profile-pic">
             <div class="main-header-content">
                 <h1 class="main-title">
-                    I am&nbsp;<span class="main-name">Raghavendra Vellaturi</span>, <span class="main-about about-me"><i class="fas fa-code"></i></span>
+                    I am&nbsp;<span class="main-name">Raghavendra Vellaturi</span>,&nbsp <span class="main-about about-me"><i class="fas fa-code"></i></span>
                 </h1>
                 <p id="correction" class="main-intro">Aspiring Full Stack Developer with a strong passion for technology, dedicated to excellence and continuous learning. I believe in writing clean, maintainable code and enjoy collaborating to solve real-world problems. Driven by curiosity and creativity, I am eager to contribute to innovative projects and grow with talented teams in a dynamic environment.</p>
             </div>
